Add solution section

--- a/index.html
+++ b/index.html
@@ -88,41 +88,58 @@
 
       
       <section class="detail">
-        <div class="col-lg-12 col-md-12 closebutton">
+        <!-- <div class="col-lg-12 col-md-12 closebutton">
           <img src="assets/img/detailListClose.png" id="detailCloseBtn">
-        </div>
+        </div> -->
 
         <div class="content">
           <div class="detailContainer" >
             <div class="col-lg-2 col-md-12 interval detailColumn">
-              <h2>產品</h2>
+              <h2>域名服務</h2>
               <hr/>
-              <div class="a-Interval"><a href="#">內容分發網絡</a></div>
+              <div class="a-Interval"><a href="#">域名購買</a></div>
               <div class="a-Interval"><a href="#">域名解析</a></div>
               <div class="a-Interval"><a href="#">域名跳轉</a></div>
-              <div class="a-Interval"><a href="#">影音串流加速</a></div>
+              <div class="a-Interval"><a href="#">證書購買</a></div>
             </div>
   
             <div class="col-lg-2 col-md-12 interval detailColumn">
-              <h2>服務</h2>
+              <h2>公有雲服務</h2>
               <hr/>
-              <div class="a-Interval"><a href="#">企業辦公</a></div>
-              <div class="a-Interval"><a href="#">資訊安全</a></div>
-              <div class="a-Interval"><a href="#">簡訊代發</a></div>
-              <div class="a-Interval"><a href="#">備案域名</a></div>
+              <div class="a-Interval"><a href="#">AWS</a></div>
+              <div class="a-Interval"><a href="#">GCP</a></div>
+              <div class="a-Interval"><a href="#">Azure</a></div>
+              <div class="a-Interval"><a href="#">A-Li</a></div>
+              <div class="a-Interval"><a href="#">華為</a></div>
+            </div>
+
+            <div class="col-lg-2 col-md-12 interval detailColumn">
+              <h2>中國解決方案</h2>
+              <hr/>
+              <div class="a-Interval"><a href="#">ICP備案</a></div>
+              <div class="a-Interval"><a href="#">中國連線方案</a></div>
+            </div>
+
+            <div class="col-lg-2 col-md-12 interval detailColumn">
+              <h2>CDN解決方案</h2>
+              <hr/>
+              <div class="a-Interval"><a href="#">靜態加速</a></div>
+              <div class="a-Interval"><a href="#">全站加速</a></div>
+              <div class="a-Interval"><a href="#">串流服務</a></div>
             </div>
   
             <div class="col-lg-2 col-md-12 detailColumn">
-              <h2>定價</h2>
+              <h2>資安服務</h2>
               <hr/>
-              <div class="a-Interval"><a href="#">產品服務價格</a></div>
+              <div class="a-Interval"><a href="#">DDos防護</a></div>
+              <div class="a-Interval"><a href="#">滲透測試</a></div>
             </div>
           </div>
   
-          <div class="detailButtons">
+          <!-- <div class="detailButtons">
             <div class="detailButton">聯繫客服</div>
             <div class="detailButton">搶先註冊</div>
-          </div>
+          </div> -->
         </div>
         
       </section>
