Adjust services section and cooperation section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container">
           <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">關於Leacloud力雲科技</h1>
+            <h1 class="sectionSubTitle">關於Leacloud力雲</h1>
             <hr>
           </div>
           <p>
@@ -143,25 +143,25 @@
             <li>
               <a class="icon-box" href="#tab-1">
                 <img src="assets/img/introDns.png" alt="" loading="lazy">
-                <h4>智能DNS</h4>
+                <h4>LeaCloudCDN</h4>
               </a>
             </li>
-            <li>
+            <!-- <li>
               <a class="" href="#tab-1">
                 <img src="assets/img/introNs.png" alt="" loading="lazy">
                 <h4>NS託管</h4>
               </a>
-            </li>
+            </li> -->
             <li>
               <a class="featuresCnameItemA" href="#tab-1">
                 <img class="featuresCnameItemImg" src="assets/img/introCname.png" alt="" loading="lazy">
-                <h4>CNAME託管</h4>
+                <h4>LeaDNS</h4>
               </a>
             </li>
             <li>
               <a class="" href="#tab-1">
                 <img src="assets/img/introMonitor.png" alt="" loading="lazy">
-                <h4>Monitor</h4>
+                <h4>遠端辦公</h4>
               </a>
             </li>
             <li>
@@ -177,7 +177,7 @@
       <section class="services">
         <div class="sectionTitleDiv">
           <div class="sectionTitle">LEACLOUD</div>
-          <h1 class="sectionSubTitle">產品專業</h1>
+          <h1 class="sectionSubTitle">LeaCloudCDN</h1>
           <hr>
         </div>
 
@@ -196,13 +196,11 @@
             </div>
             <div class="gallery-item">
               <div class="gallery-item-content item2">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges2.png" loading="lazy">
+                <h3>豐富快速路由</h3>
+                <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
               </div>
               <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
+                LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
               </p>
             </div>
             <div class="gallery-item">
@@ -266,13 +264,10 @@
             <div class="cooperationSectionTitleContainer">
               <div class="cooperationSectionContent">
                 <div class="sectionTitle">LEACLOUD</div>
-                <h1 class="sectionSubTitle">合作廠商</h1>
+                <h1 class="sectionSubTitle">LeaCloud還提供哪些服務？</h1>
                 <hr>
                 <div class="cooperationIntro">
-                  文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字
-                  文字文字文字文字文字文字文字文字文字
+                  有鑑於資訊的快速推陳出新，LeaCloud建立起強大的團隊，提供專業貼心的服務項目，無論整體企業，小型部門或個人辦公室，您都可在這享有一站式的資訊服務。
                 </div>
               </div>
             </div>
@@ -280,46 +275,40 @@
               <div class="gallery">
                 <div class="galleryCooperationContainer">
                   <div class="galleryCooperationItem">
-                    <div class="galleryCooperationTitleItemContent ">
-                      <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
-                      <h2 class="title">主標題文字</h5>
+                    <div class="galleryCooperationTitleItemContent linegradientOrange">
+                      <img src="assets/img/cooperation/number2.png" alt="" loading="lazy">
+                      <h2 class="title">LeaDNS</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
-                      <i class="fas fa-quote-left"></i>
+                      <i class="fas fa-quote-left fontOrange"></i>
                       <p>
-                        文字文字文字文字文字文字文字文字文字文字文字文
-                        字文字文字文字文字文字文字文字文字文字文字文字
-                        文字文字文字文字文字文字文字文字文字文字
+                        為LeaCloud提供的域名解析服務。透過 LeaDNS能更易於管理DNS，幫助您識別您的域名名稱和其IP位址判斷，藉此將用戶的訪問路由連結到相應的網站或應用服務。LeaDNS為您搭起 DNS 解析的最便捷的橋樑，達到快速穩定的域名解析體驗。
                       </p>
                     </div>
                   </div>
                   
                   <div class="galleryCooperationItem">
-                    <div class="galleryCooperationTitleItemContent ">
+                    <div class="galleryCooperationTitleItemContent linegradientBlue">
                       <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
-                      <h2 class="title">主標題文字</h5>
+                      <h2 class="title">企業辦公</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
-                      <i class="fas fa-quote-left"></i>
-                      <p>
-                        文字文字文字文字文字文字文字文字文字文字文字文
-                        字文字文字文字文字文字文字文字文字文字文字文字
-                        文字文字文字文字文字文字文字文字文字文字
+                      <i class="fas fa-quote-left fontBlue"></i>
+                      <p>為企業的行動辦公需求而生。LeaProtect、居家辦公以及LeaDesk，三線三護打造企業辦公最前道防線，保障貼身手機、電腦及伺服器安全隱蔽，打造員工個人化環境，不需擔心企業資料和行動位置洩漏。
+                        還可透過LeaExpress快捷送達您的貨品，降低運送的負擔和風險。
                       </p>
                     </div>
                   </div>
 
                   <div class="galleryCooperationItem">
-                    <div class="galleryCooperationTitleItemContent ">
-                      <img src="assets/img/cooperation/number1.png" alt="" loading="lazy">
-                      <h2 class="title">主標題文字</h5>
+                    <div class="galleryCooperationTitleItemContent linegradientPink">
+                      <img src="assets/img/cooperation/number3.png" alt="" loading="lazy">
+                      <h2 class="title">資訊安全</h5>
                     </div>
                     <div class="galleryCooperationItemContent paddingTopRight">
-                      <i class="fas fa-quote-left"></i>
+                      <i class="fas fa-quote-left fontPink"></i>
                       <p>
-                        文字文字文字文字文字文字文字文字文字文字文字文
-                        字文字文字文字文字文字文字文字文字文字文字文字
-                        文字文字文字文字文字文字文字文字文字文字
+                        為保障您的辦公室環境及設備安全，不論是事前預防或事後調查，我們提供專業的檢測調查與顧問服務。LeaSecurity 團隊擁有市場資深的實務經驗，為您提供惡意程式檢測服務、事故調查、滲透測試服務、紅隊演練服務及弱點掃描服務，保障企業的資訊安全。
                       </p>
                     </div>
                   </div>
@@ -350,8 +339,8 @@
                     </div>
                   </div> -->
                   <div class="galleryCooperationControls">
-                    <i class="fas fa-arrow-circle-left controlButton gallery-controls-previous" id="cooperationControlPre"></i>
-                    <i class="fas fa-arrow-circle-right controlButton gallery-controls-next" id="cooperationControlNex"></i>
+                    <i class="fas fa-arrow-left gallery-controls-previous" id="cooperationControlPre"></i>
+                    <i class="fas fa-arrow-right gallery-controls-next" id="cooperationControlNex"></i>
                   </div>
                 </div>
               </div>
