Adjust service section

--- a/index.html
+++ b/index.html
@@ -184,68 +184,70 @@
         <div class="gallery">
           <div class="gallery-container">
             <div class="gallery-item">
-              <div class="gallery-item-content item1">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges1.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                </p>
               </div>
-              <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
-              </p>
             </div>
             <div class="gallery-item">
-              <div class="gallery-item-content item2">
-                <h3>豐富快速路由</h3>
-                <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  123
+                </p>
               </div>
-              <p>
-                LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
-              </p>
             </div>
             <div class="gallery-item">
-              <div class="gallery-item-content item3">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges3.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                </p>
               </div>
-              <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
-              </p>
             </div>
             <div class="gallery-item">
-              <div class="gallery-item-content item4">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges4.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                </p>
               </div>
-              <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
-              </p>
             </div>
             <div class="gallery-item">
-              <div class="gallery-item-content item5">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges5.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                </p>
               </div>
-              <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
-              </p>
             </div>
             <div class="gallery-item">
-              <div class="gallery-item-content">
-                <h3>文字文字</h3>
-                <img class="" src="assets/img/productAdventanges5.png" loading="lazy">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content item2">
+                  <h3>豐富快速路由</h3>
+                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                </div>
+                <p>
+                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                </p>
               </div>
-              <p>
-                文字文字文字文字文字文字文字文字文字文字文字文
-                字文字文字文字文字文字文字文字文字文字文字文字
-                文字文字文字文字文字文字文字文字文字文字
-              </p>
             </div>
             <div class="gallery-controls">
               <i class="fas fa-arrow-left gallery-controls-previous" id="servicesControlPre"></i>
