Adjust with uiux

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container">
           <div class="sectionTitleDiv">
             <div class="sectionTitle">LEACLOUD</div>
-            <h1 class="sectionSubTitle">關於Leacloud力雲</h1>
+            <h1 class="sectionSubTitle">關於LeaCloud力雲</h1>
             <hr>
           </div>
           <p>
@@ -141,8 +141,8 @@
           </p>
           <ul class="nav featuresItemContainer">
             <li>
-              <a class="icon-box" href="#tab-1">
-                <img src="assets/img/introDns.png" alt="" loading="lazy">
+              <a class="" href="#tab-1">
+                <img class="featuresCnameItemImg" src="assets/img/introCname.png" alt="" loading="lazy">
                 <h4>LeaCloudCDN</h4>
               </a>
             </li>
@@ -153,8 +153,8 @@
               </a>
             </li> -->
             <li>
-              <a class="featuresCnameItemA" href="#tab-1">
-                <img class="featuresCnameItemImg" src="assets/img/introCname.png" alt="" loading="lazy">
+              <a class="" href="#tab-1">
+                <img  src="assets/img/introDns.png" alt="" loading="lazy">
                 <h4>LeaDNS</h4>
               </a>
             </li>
@@ -183,9 +183,20 @@
 
         <div class="gallery">
           <div class="gallery-container">
-            <div class="gallery-item">
+            <div class="gallery-item frameOrange">
               <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
+                <div class="gallery-item-content">
+                  <h3>開放/阻擋黑白名單</h3>
+                  <img class="" src="assets/img/services/blockBlackWhiteList_orange.png" loading="lazy">
+                </div>
+                <p>
+                  您可依據您網站的市場規劃，針對個別域名的訪問管理，「開放」（白名單）或「阻擋」（黑名單）訪問來源的國家地區以及使用者IP位置。
+                </p>
+              </div>
+            </div>
+            <div class="gallery-item framePurple">
+              <div class="gallery-item-container">
+                <div class="gallery-item-content">
                   <h3>豐富快速路由</h3>
                   <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
                 </div>
@@ -194,61 +205,52 @@
                 </p>
               </div>
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item frameBlue">
               <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
-                  <h3>豐富快速路由</h3>
-                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                <div class="gallery-item-content">
+                  <h3>域名託管</h3>
+                  <img class="" src="assets/img/services/domainNameHosting_blue.png" loading="lazy">
                 </div>
                 <p>
-                  123
+                  LeaCloud CDN提供NS託管加速及CNAME託管加速，介面簡潔明瞭、操作簡便，將您的域名輕鬆託管，維護不再是負擔。
+                  依照您的管理規劃，彈性選擇NS託管或CNAME託管，不同託管模式，輕鬆將網站一鍵加速。支援 HTTP/HTTPS、動態WebSocket，並可自訂緩存時間、憑證、狀態碼導轉頁等，依域名需求細節配置。
                 </p>
               </div>
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item frameOrange">
               <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
-                  <h3>豐富快速路由</h3>
-                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                <div class="gallery-item-content">
+                  <h3>自動監控</h3>
+                  <img class="" src="assets/img/services/autoMonitor_orange.png" loading="lazy">
                 </div>
                 <p>
-                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                  在LeaCloud平台上可監控和查詢期間內您的所有或個別網站域名的CDN使用狀態，包含傳輸流量、頻寬、訪問次數、HTTP狀態數。
                 </p>
               </div>
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item framePurple">
               <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
-                  <h3>豐富快速路由</h3>
-                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                <div class="gallery-item-content">
+                  <h3>Referer防盜鏈功能</h3>
+                  <img class="" src="assets/img/services/Referer_purple.png" loading="lazy">
                 </div>
                 <p>
-                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                  透過對訪問來源設置過濾的機制，避免您的網站資源輕易受盜用。設置LeaCloud Referer防盜鏈功能，以防止站台內容透過他人程式鑲嵌，或是獲取鏈結而開啟。
                 </p>
               </div>
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item frameBlue">
               <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
-                  <h3>豐富快速路由</h3>
-                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
+                <div class="gallery-item-content">
+                  <h3>憑證管理</h3>
+                  <img class="" src="assets/img/services/certificateManagement_blue.png" loading="lazy">
                 </div>
                 <p>
-                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
+                  提供HTTP/HTTPS，讓您的網站傳輸加密可受保護。可在 LeaCloud 平台上傳您的自有憑證。或是透過NS託管，使用系統自動生成SSL憑證，系統產生的SSL憑證會自動展延有效期限。
                 </p>
               </div>
             </div>
-            <div class="gallery-item">
-              <div class="gallery-item-container">
-                <div class="gallery-item-content item2">
-                  <h3>豐富快速路由</h3>
-                  <img class="" src="assets/img/services/fastRoute_purple.png" loading="lazy">
-                </div>
-                <p>
-                  LeaCloud擁有豐富的地理節點資源，遍布範圍有中國多個省份城市、東亞、東南亞及歐美地區。虛、實整合的主機線路，強大而靈活的CDN互聯網結構設計，提供最短、最快的分辨率路由，以確保您網站的競爭力。
-                </p>
-              </div>
-            </div>
+            
             <div class="gallery-controls">
               <i class="fas fa-arrow-left gallery-controls-previous" id="servicesControlPre"></i>
               <i class="fas fa-arrow-right gallery-controls-next" id="servicesControlNex"></i>
@@ -269,7 +271,7 @@
                 <h1 class="sectionSubTitle">LeaCloud還提供哪些服務？</h1>
                 <hr>
                 <div class="cooperationIntro">
-                  有鑑於資訊的快速推陳出新，LeaCloud建立起強大的團隊，提供專業貼心的服務項目，無論整體企業，小型部門或個人辦公室，您都可在這享有一站式的資訊服務。
+                  有鑑於資訊的快速推陳出新，<br>LeaCloud建立起強大的團隊，<br>提供專業貼心的服務項目，<br>無論整體企業，小型部門或個人辦公室，<br>您都可在這享有一站式的資訊服務。
                 </div>
               </div>
             </div>
