Adjust cooperation section

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
       </section>
 
       <section class="cooperation">
+        <div class="container">
         <div class="cooperationContainer">
           <img src="assets/img/cooperation/curveLine.png" alt="" loading="lazy">
           <div class="cooperationContent">
@@ -353,6 +354,7 @@
             </div>
           </div>
           <div class="vertical"></div>
+        </div>
         </div>
       </section>
 
