Adjust cooperation section and pricing section

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <hr>
           </div>
           <p>您可依據您事業的需求，選擇適合您的方案。若有其他需求，請洽客服。</p>
-          <div class="row gy-4" data-aos="fade-left">
+          <div class="row gy-4 pricingItemGroup" data-aos="fade-left">
             <div class="col-lg-4 col-md-6 pricingBoxCotent" data-aos="zoom-in" data-aos-delay="100">
               <div class="box">
                 <span class="featured"><i class="fas fa-star star"></i></span>
