Adjust footer section

--- a/index.html
+++ b/index.html
@@ -569,9 +569,14 @@
           <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
             <h4>聯絡資訊</h4>
-            <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank">Telegram</a></div>
+            <!-- <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank">Telegram</a></div> -->
             <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
-            <div class="a-Interval"><a href="#">sales@leacloud.com</a></div>
+            <div class="a-Interval"><a href="#">k3nnyart@gmail.com</a></div>
+            <div>
+              <i class="fab fa-telegram-plane"></i>
+              <i class="fab fa-skype"></i>
+              <i class="fas fa-play-circle"></i>
+            </div>
           </div>
         </div>
       </footer>
