Adjust blobe rwd

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       </section>
 
       <section class="globe">
-        <div class="container">
+        <div class="container" id="globe-container">
           <!-- <div id="globeSection" class="col-lg-6"></div> -->
           <div class="col-lg-6 globeDotsSection">
             <div class="globeDots js-globe">
@@ -544,9 +544,9 @@
           </div>
           <div class="col-lg-2 col-md-12 interval">
             <hr class="aboutUs" />
-            <h4>關於我們</h4>
-            <div class="a-Interval"><a href="#">LeaCloud團隊</a></div>
-            <div class="a-Interval"><a href="#features">力雲科技</a></div>
+            <h4>關於力雲</h4>
+            <div class="a-Interval"><a href="#">力雲團隊</a></div>
+            <div class="a-Interval"><a href="#features">公司沿革</a></div>
             <div class="a-Interval"><a href="#contact">公司資訊</a></div>
           </div>
 
@@ -555,27 +555,27 @@
             <h4>幫助中心</h4>
             <div class="a-Interval"><a href="#">聯繫客服</a></div>
             <div class="a-Interval"><a href="#signup">創建帳戶</a></div>
-            <div class="a-Interval"><a href="#">合作方式</a></div>
+            <div class="a-Interval"><a href="#">常見問題</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="toolsInfo" />
-            <h4>工具資訊</h4>
+            <h4>網站資訊</h4>
             <div class="a-Interval"><a href="#">隱私權政策</a></div>
             <div class="a-Interval"><a href="#">Cookie政策</a></div>
-            <div class="a-Interval"><a href="#">更多工具</a></div>
+            <div class="a-Interval"><a href="#">網站地圖</a></div>
           </div>
 
           <div class="col-lg-2 col-md-12 interval">
             <hr class="contactInfo" />
-            <h4>聯絡資訊</h4>
+            <h4>聯絡我們</h4>
             <!-- <div class="a-Interval"><a href="https://telegram.me/leacloud" target="_blank">Telegram</a></div> -->
             <div class="a-Interval"><a href="#">+886 966-625-710</a></div>
             <div class="a-Interval"><a href="#">k3nnyart@gmail.com</a></div>
             <div>
-              <i class="fab fa-telegram-plane"></i>
-              <i class="fab fa-skype"></i>
-              <i class="fas fa-play-circle"></i>
+              <a href="https://telegram.me/leacloud" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+              <a href="skype:live:.cid.36d196aca11d6650?chat"><i class="fab fa-skype"></i></a>
+              <a href="https://www.leacloud.com/video/leacloud_Intro.mp4" target="_blank"><i class="fas fa-play-circle"></i></a>
             </div>
           </div>
         </div>
