--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <ul>
               <li class="headerList-li"><a href="#" id="login">登入</a></li>
               <li class="headerList-li"><a href="#" id="logup">註冊</a></li>
-              <li class="headerList-li drop-down"><a>語言選擇</a>
+              <li class="headerList-li drop-down"><a  id="languageSelect">語言選擇</a>
                 <ul>
                   <div class="triangle"></div>
                   <li><a href="#" onclick="changeLng('en')">EN</a></li>
@@ -40,7 +40,7 @@
                   <li><a href="#" onclick="changeLng('sc')">簡體中文</a></li>
                 </ul>
               </li>
-              <li class="headerList-li"><a href="#">聯繫我們</a></li>
+              <li class="headerList-li"><a href="#" id="contactUs">聯繫我們</a></li>
             </ul>
           </nav>
           <img class="navMenuImg" src="assets/img/headerList.png" alt="" loading="lazy">
@@ -52,10 +52,10 @@
       <section id="banner">
         <div class="bannerContainer">
           <div class="bannerContent">
-            <h1 class="bannerContentTitle">網路拉近世界距離</h1>
-            <h2 class="bannerContentSubTitle">Leacloud打通你我距離</h2>
+            <h1 class="bannerContentTitle" id="bannerTitle">網路拉近世界距離</h1>
+            <h2 class="bannerContentSubTitle" id="bannerSubtitle">Leacloud打通你我距離</h2>
             <div class="bannerContentText">
-              立即試用<br>
+              <div id="bannerContentText">立即試用</div>
               <!-- <svg width="100px" height="80px" viewbox="0 0 400 400">
                 <path stroke="#000" stroke-width="30" fill="none" 
                       d="M100 350 A 100 100 0 0 1 200 150
